Application処理の改善